# dirty-word-scanner

./: .coveragerc  .gitignore  FileCache.py  FileFingerprint.py  README.md  SensitiveStringMatcher.py  __init__.py  pyproject.toml  sensitive_strings.py
.github/workflows/: continuous_integration.yml
src/opencsp_sensitive_strings/: AbstractFileFingerprint.py  FileCache.py  FileFingerprint.py  SensitiveStringMatcher.py  abstract_file_fingerprint.py  config.py  csv_interface.py  file_cache.py  file_finder.py  file_fingerprint.py  hdf5_extraction.py  image.py  image_conversion.py  sensitive_string_matcher.py  sensitive_strings.py  sensitive_strings_searcher.py  user_interaction.py
test/: test_FileCache.py  test_FileFingerprint.py  test_SensitiveStringMatcher.py  test_file_cache.py  test_file_fingerprint.py  test_image.py  test_image_conversion.py  test_sensitive_string_matcher.py  test_sensitive_strings.py  test_sensitive_strings_searcher.py
test/data/input/sensitive_strings/per_test_allowed_binaries/: all_binaries.csv  no_binaries.csv  single_binary.csv  single_expected_not_found_binary.csv
